feat: Add History and MetricCard Components
The History component displays the logged or not logged data for specific dates from the calendar and displays them in form of MetricCards.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-web": "^0.11.4",
     "react-redux": "^7.1.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "udacifitness-calendar": "^11.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1"
