--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-web": "^0.11.4",
+    "react-navigation": "^2.18.3",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
     "udacifitness-calendar": "^11.0.0"
